@@ -1,5 +1,6 @@
 package controller;
-
+import dto.Model.UserModel;
+import dto.requests.UpdateUserRequest;
 import javafx.application.Platform;
 import javafx.beans.property.ObjectProperty;
 import javafx.beans.property.SimpleObjectProperty;
@@ -16,18 +17,25 @@ import javafx.scene.control.TreeView;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.input.MouseButton;
+import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.Pane;
 import javafx.scene.paint.Color;
 import javafx.scene.shape.Circle;
 import javafx.scene.text.Font;
 import javafx.stage.Popup;
+import model.Chat;
 import model.CurrentUser;
+import model.Group;
 import model.Model;
+import network.NetworkFactory;
+import view.ControllerFactory;
 
 import java.io.IOException;
 import java.net.URL;
+import java.rmi.NotBoundException;
 import java.rmi.RemoteException;
+import java.sql.SQLException;
 import java.util.ResourceBundle;
 
 public class ContactsController implements Initializable {
@@ -49,6 +57,7 @@ public class ContactsController implements Initializable {
 
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
+        Model.getInstance().getControllerFactory().setContactsController(this);
         observableContactDataList = FXCollections.observableArrayList();
 
         double parentWidth = statusCircle.getParent().getBoundsInLocal().getWidth();
@@ -57,7 +66,7 @@ public class ContactsController implements Initializable {
         statusCircle.setLayoutY(parentWidth - circleWidth);
         try {
             setImageProfileData();
-        } catch (RemoteException e) {
+        } catch (RemoteException | SQLException | NotBoundException | ClassNotFoundException e) {
             throw new RuntimeException(e);
         }
         try {
@@ -66,26 +75,9 @@ public class ContactsController implements Initializable {
             throw new RuntimeException(e);
         }
         addListenerToTreeView();
-        statusCircle.setOnMouseClicked(mouseEvent -> {
-            if (mouseEvent.getButton() == MouseButton.PRIMARY) { // Check if left button was clicked
-                try {
-                    FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/Contacts/StatusContextMenu.fxml"));
-                    Pane pane = loader.load();
-
-                    StatusContextMenuController statusContextMenuController = loader.getController();
-                    statusContextMenuController.setContactsController(this);
-
-                    Popup popup = new Popup();
-                    statusContextMenuController.setPopup(popup);
-                    popup.getContent().add(pane);
-                    popup.setAutoHide(true);
-                    popup.show(statusCircle.getScene().getWindow(), mouseEvent.getScreenX(), mouseEvent.getScreenY());
-                } catch (IOException e) {
-                    throw new RuntimeException(e);
-                }
-            }
-        });
+        statusCircle.setOnMouseClicked(this::changeStatus);
     }
+
 
     public void setTreeViewData() throws RemoteException {
         observableContactDataList.setAll(CurrentUser.getInstance().getContactDataList());
@@ -93,41 +85,82 @@ public class ContactsController implements Initializable {
         TreeItem<Node> rootParent = new TreeItem<>();
 
         Label label = new Label("Contacts");
-        label.setStyle("-fx-font-weight: bold; -fx-text-fill: white; -fx-background-color: #CA3503;");
-        label.setFont(Font.font("Arial", 40));
-        label.setPrefWidth(300);
-        label.setPrefHeight(25);
+        label.setId("myLabel");
         rootParent = new TreeItem<>(label);
 
         TreeItem<Node> rootOnline = new TreeItem<>(loadFXML("Online", Color.GREEN));
         rootOnline.setExpanded(true);
 
-        TreeItem<Node> rootOffline = new TreeItem<>(loadFXML("Offline", Color.RED));
+        TreeItem<Node> rootOffline = new TreeItem<>(loadFXML("Offline", Color.GRAY));
         rootOffline.setExpanded(true);
+        TreeItem<Node> group = new TreeItem<>(loadFXML("Groups", Color.PURPLE));
+        group.setExpanded(true);
 
         for (ContactData contact : observableContactDataList) {
             Color color = contact.getColor();
+            System.out.println("Contact: " + contact.getName() + " is " + color);
             TreeItem<Node> contactNode = new TreeItem<>(loadFXML(contact));
-            if (color.equals(Color.GREEN)) {
-                rootOnline.getChildren().add(contactNode);
-            } else {
+            if (color.equals(Color.GRAY)) {
                 rootOffline.getChildren().add(contactNode);
+            } else {
+                rootOnline.getChildren().add(contactNode);
             }
         }
+        for(int i = 0 ; i < CurrentUser.getInstance().getGroupList().size(); i++){
+            TreeItem<Node> groupNode = new TreeItem<>(loadFXML(CurrentUser.getInstance().getGroupList().get(i)));
+            group.getChildren().add(groupNode);
+        }
+
 
         rootParent.setExpanded(true);
-        rootParent.getChildren().addAll(rootOnline, rootOffline);
-
+        rootParent.getChildren().addAll(rootOnline, rootOffline, group);
         treeView.setRoot(rootParent);
+        treeView.refresh();
 
     }
 
-    public void changeStatusColor(Color color) {
-        System.out.println("changeStatusColor called with color: " + color.toString());
+    public void changeStatusColor(Color color) throws RemoteException, SQLException, NotBoundException, ClassNotFoundException {
         Platform.runLater(() -> statusCircle.setFill(color));
+        if(color.equals(Color.GREEN)){
+            CurrentUser.getInstance().setUserStatus(CurrentUser.UserStatus.Online);
+            CurrentUser.getInstance().setUserMode(CurrentUser.UserMode.Available);
+        }
+        else if(color.equals(Color.RED)){
+            CurrentUser.getInstance().setUserMode(CurrentUser.UserMode.Busy);
+        }
+        else if(color.equals(Color.YELLOW)){
+            CurrentUser.getInstance().setUserMode(CurrentUser.UserMode.Away);
+        }
+        // Get the current user
+        CurrentUser currentUser = CurrentUser.getInstance();
+
+// Create a new UserModel instance
+        UserModel user = new UserModel();
+
+// Set only the relevant fields
+        user.setUserID(currentUser.getUserID());
+        user.setPhoneNumber(currentUser.getPhoneNumber());
+        user.setUserName(currentUser.getUserName());
+        user.setEmailAddress(currentUser.getEmailAddress());
+        user.setProfilePicture(currentUser.getProfilePicture());
+        user.setGender(currentUser.getGender());
+        user.setCountry(currentUser.getCountry());
+        user.setDateOfBirth(currentUser.getDateOfBirth());
+        user.setBio(currentUser.getBio());
+        user.setUserStatus(currentUser.getUserStatus());
+        user.setUserMode(currentUser.getUserMode());
+        user.setLastLogin(currentUser.getLastLogin());
+
+// Create the UpdateUserRequest with the new UserModel instance
+        UpdateUserRequest updateUserRequest = new UpdateUserRequest(user);
+
+// Send the request
+        NetworkFactory.getInstance().updateUser(updateUserRequest);
+
+
     }
 
-    private void setImageProfileData() throws RemoteException {
+    private void setImageProfileData() throws RemoteException, SQLException, NotBoundException, ClassNotFoundException {
         double newRadius = 28;
         imageClip.setRadius(newRadius);
         imageClip.setCenterX(newRadius);
@@ -167,6 +200,21 @@ public class ContactsController implements Initializable {
             controller.setName(contactData.getName());
             controller.setStatus(contactData.getColor());
             controller.setImagId(contactData.getImage().getImage());
+            controller.setChatID(contactData.getChatId());
+            return new HBox(node); // Wrap the Node in an HBox
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+    private Node loadFXML(Group group) {
+        try {
+            FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/Contacts/ContactElement.fxml"));
+            Node node = loader.load();
+            ContactElementController controller = loader.getController();
+            controller.setName(group.getGroupName());
+            controller.setStatus(Color.PURPLE);
+            controller.setImagId(group.getGroupImage().getImage());
+            controller.setChatID(group.getGroupId());
             return new HBox(node); // Wrap the Node in an HBox
         } catch (IOException e) {
             throw new RuntimeException(e);
@@ -174,50 +222,99 @@ public class ContactsController implements Initializable {
     }
 
     private void addListenerToTreeView() {
-        System.out.println("TreeView initialized with " + treeView.getExpandedItemCount() + " items");
+    System.out.println("TreeView initialized with " + treeView.getExpandedItemCount() + " items");
 
-        treeView.getSelectionModel().selectedItemProperty().addListener((observableValue, oldValue, newValue) -> {
-            System.out.println("New item selected in TreeView");
-            if (newValue != null) {
-                System.out.println("New value is not null");
-                Node selectedNode = newValue.getValue();
+    treeView.getSelectionModel().selectedItemProperty().addListener((observableValue, oldValue, newValue) -> {
+        System.out.println("New item selected in TreeView");
+        if (newValue != null) {
+            System.out.println("New value is not null");
+            Node selectedNode = newValue.getValue();
 
-                if (selectedNode instanceof HBox selectedHBox) {
-                    Node root = selectedHBox.getChildren().get(0); // Get the root of the loaded FXML file
-                    System.out.println("Root of selected node is " + root.getClass().getName());
-                    if (root instanceof HBox rootHBox) {
-                        System.out.println("Root is an HBox");
-                        for (Node child : rootHBox.getChildren()) {
-                            System.out.println("Child class: " + child.getClass().getName());
-                        }
-                        if (rootHBox.getChildren().get(0) instanceof Pane) {
-                            System.out.println("First child is a Pane");
-                            // It's a contact node
-                            Pane pane = (Pane) rootHBox.getChildren().get(0);
-                            ImageView imageView = (ImageView) pane.getChildren().getFirst();
-                            if (rootHBox.getChildren().get(1) instanceof Label) {
-                                System.out.println("Second child is a Label");
-                                Label label = (Label) rootHBox.getChildren().get(1);
+            if (selectedNode instanceof HBox selectedHBox) {
+                Node root = selectedHBox.getChildren().get(0); // Get the root of the loaded FXML file
+                System.out.println("Root of selected node is " + root.getClass().getName());
+                if (root instanceof HBox rootHBox) {
+                    System.out.println("Root is an HBox");
+                    for (Node child : rootHBox.getChildren()) {
+                        System.out.println("Child class: " + child.getClass().getName());
+                    }
+                    if (rootHBox.getChildren().get(0) instanceof Pane) {
+                        System.out.println("First child is a Pane");
+                        // It's a contact node
+                        Pane pane = (Pane) rootHBox.getChildren().get(0);
+                        ImageView imageView = (ImageView) pane.getChildren().getFirst();
+                        if (rootHBox.getChildren().get(1) instanceof Label) {
+                            System.out.println("Second child is a Label");
+                            Label label = (Label) rootHBox.getChildren().get(1);
+                            Label label2 = (Label)rootHBox.getChildren().get(3);
 
-                                String name = label.getText();
-                                ContactData contactData = new ContactData();
-                                contactData.setName(name);
-                                contactData.setImage(imageView);
-                                setSelectedContact(contactData);
-                                contactListener(contactData);
-                            } else {
-                                System.out.println("Second child is not a Label");
+                            String name = label.getText();
+                            int ID = Integer.parseInt(label2.getText());
+
+                            // Check if the selected item is a group or a contact
+                            try {
+                                if (isGroup(name)) {
+                                    // Handle group
+                                    try {
+                                        Group group = getGroup(name);
+                                        contactListener(group);
+                                    } catch (RemoteException e) {
+                                        throw new RuntimeException(e);
+                                    }
+                                    // Do something with the group...
+                                } else {
+                                    // Handle contact
+                                    ContactData contactData = new ContactData();
+                                    contactData.setName(name);
+                                    contactData.setImage(imageView);
+                                    contactData.setChatId(ID);
+                                    setSelectedContact(contactData);
+                                    System.out.println("Id of contact "+contactData.getId());
+                                    contactListener(contactData);
+                                }
+                            } catch (RemoteException e) {
+                                throw new RuntimeException(e);
                             }
+                        } else {
+                            System.out.println("Second child is not a Label");
                         }
                     }
                 }
             }
-        });
+        }
+    });
+}
+
+    private boolean isGroup(String name) throws RemoteException {
+        for(int i = 0 ; i < CurrentUser.getInstance().getGroupList().size(); i++){
+            if(CurrentUser.getInstance().getGroupList().get(i).getGroupName().equals(name)){
+                return true;
+            }
+        }
+        return false;
     }
 
-    public void contactListener(ContactData contactData) {
-        System.out.println("contactListener called with contact: " + contactData.getName());
+    private Group getGroup(String name) throws RemoteException {
+        for(int i = 0 ; i < CurrentUser.getInstance().getGroupList().size(); i++){
+            if(CurrentUser.getInstance().getGroupList().get(i).getGroupName().equals(name)){
+                return CurrentUser.getInstance().getGroupList().get(i);
+            }
+        }
+        return null;
+    }
+
+    public void contactListener(Chat contactData) {
         Model.getInstance().getViewFactory().getSelectedContact().setValue(contactData);
+
+        try {
+            Model.getInstance().getControllerFactory().getChatController().getMessageOfContact();
+
+        } catch (RemoteException e) {
+            throw new RuntimeException(e);
+        } catch (NotBoundException e) {
+            throw new RuntimeException(e);
+        }
+       // System.out.println(Model.getInstance().getViewFactory().getSelectedContact().get().getName());
     }
 
     public ContactData getSelectedContact() {
@@ -236,4 +333,23 @@ public class ContactsController implements Initializable {
         return selectedContact;
     }
 
+    private void changeStatus(MouseEvent mouseEvent) {
+        if (mouseEvent.getButton() == MouseButton.PRIMARY) { // Check if left button was clicked
+            try {
+                FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/Contacts/StatusContextMenu.fxml"));
+                Pane pane = loader.load();
+
+                StatusContextMenuController statusContextMenuController = loader.getController();
+                statusContextMenuController.setContactsController(this);
+
+                Popup popup = new Popup();
+                statusContextMenuController.setPopup(popup);
+                popup.getContent().add(pane);
+                popup.setAutoHide(true);
+                popup.show(statusCircle.getScene().getWindow(), mouseEvent.getScreenX(), mouseEvent.getScreenY());
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+        }
+    }
 }
